Bug 255010 - REGRESSION(262479@main): IOKit extensions are not being created.
Summary: REGRESSION(262479@main): IOKit extensions are not being created.
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WebKit Misc. (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Per Arne Vollan
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2023-04-04 15:05 PDT by Per Arne Vollan
Modified: 2023-04-04 17:05 PDT (History)
1 user (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Per Arne Vollan 2023-04-04 15:05:41 PDT
IOKit extensions are not being created for the WebContent process.
Comment 1 Per Arne Vollan 2023-04-04 15:06:13 PDT
<rdar://problem/107624406>
Comment 2 Per Arne Vollan 2023-04-04 15:11:14 PDT
Pull request: https://github.com/WebKit/WebKit/pull/12394
Comment 3 EWS 2023-04-04 17:05:18 PDT
Committed 262600@main (fcc3a2936e15): <https://commits.webkit.org/262600@main>

Reviewed commits have been landed. Closing PR #12394 and removing active labels.