REGRESSION(262479@main): IOKit extensions are not being created. https://bugs.webkit.org/show_bug.cgi?id=255010 rdar://107624406

Reviewed by Tim Horton.

IOKit extensions are not being created for the WebContent process.

* Source/WebKit/UIProcess/WebPageProxy.cpp:
(WebKit::shouldBlockIOKit):
(WebKit::WebPageProxy::creationParameters):

Canonical link: https://commits.webkit.org/262600@main